# src/main/resources/swagger.yaml
@@ -22,8 +22,12 @@ paths:
             schema:
               $ref: '#/components/schemas/CreateAccountRequest'
       responses:
-        '204':
+        '201':
           description: CREATED
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AccountResponse'
         '400':
           description: BAD_REQUEST
           content:
@@ -89,8 +93,14 @@ components:
         documentNumber:
           type: string
           example: "123456"
+        availableCreditLimit:
+          type: number
+          format: decimal
+          minimum: 0
+          example: 50
       required:
         - documentNumber
+        - availableCreditLimit
     AccountResponse:
       type: object
       properties:
@@ -101,9 +111,15 @@ components:
         documentNumber:
           type: string
           example: "123456"
+        availableCreditLimit:
+          type: number
+          format: decimal
+          minimum: 0
+          example: 50
       required:
         - accountId
         - documentNumber
+        - availableCreditLimit
     CreateTransactionRequest:
       type: object
       properties:
@@ -114,7 +130,8 @@ components:
         amount:
           type: number
           format: decimal
-          example: -50.00
+          minimum: 0
+          example: 50.00
         operationType:
           $ref: '#/components/schemas/OperationType'
       required:
